# payments_engine

./: .gitignore  Cargo.toml
src/: dlq.rs  engine.rs  ingestion.rs  main.rs  output_repository.rs
src/domain/: account.rs  error.rs  mod.rs  money.rs  traits.rs  transaction.rs
tests/: integration_test.rs
