[package]
name = "payments_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
# async-trait = "0.1.89"
# csv-async = { version = "1.3.1", features = ["tokio", "with_serde"] }
csv = "1.3.1"
futures = "0.3.31"
rust_decimal = "1.37.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
